src/scss/index.scss
@import "grid";
@import "mixins";
@import "table";

html,body { height: 100%; margin: 0px; padding: 0px; background: $background-color}

input {
	width: 100%;
}

.textarea {
  width: 100%;
  height: 50px;
}


#details {
	margin: 20px 0px;
 	tr {
		display: block;
		// border-bottom: 1px solid #dd2121;
	}
}

.light {
	width: 20px;
	height: 20px;
	background-color: grey;
}
.light-valid {
	background-color: green;
}
.light-invalid {
	background-color: red;
}

.svg-container {
	background: white;
}

.wrapper {
	margin-top: 10px;
}

.block {
  background-color: $block-background-color;
  border: 1px solid black;
  border-radius: 2px;

  .block-header {
		background-color: $background-color-header;
		width: 100%;
		color: white;
  	padding: 10px 5px;
  	border-bottom: 2px solid $color-baby-blue;
	}
	.block-content {
  	padding: 10px 5px;
	}
}

.btn {
	color:white;
	text-decoration:none;
	padding: 3px 4px;
	border: none;
	font-size: 1em;
}

.btn-green {
   @include button-bg(#2ecc71);
}

.btn-blue {
   @include button-bg(#3498db);
}

.btn-yellow {
   @include button-bg(#f1c40f);
}

.btn-red {
   @include button-bg(#e74c3c);
}

